--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -56,7 +56,10 @@
     <Compile Include="Base\Writer.cs" />
     <Compile Include="Models\Attribute.cs" />
     <Compile Include="Models\DatabaseModel.cs" />
+    <Compile Include="Models\ForeignKeyAttribute.cs" />
     <Compile Include="Models\Relation.cs" />
+    <Compile Include="Models\StoredProcedure.cs" />
+    <Compile Include="Models\View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates\Basic\Dapper.cs">
       <AutoGen>True</AutoGen>
