--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -50,44 +50,163 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Abstract\IContentGenerator.cs" />
+    <Compile Include="Base\ContentGenerator.cs" />
+    <Compile Include="Base\DatabaseSchema.cs" />
+    <Compile Include="Base\DatabaseSchemaReader.cs" />
+    <Compile Include="Base\Abstract\IBasicConfiguration.cs" />
+    <Compile Include="Base\Abstract\IDatabaseSchema.cs" />
+    <Compile Include="Base\Abstract\IDatabaseSchemaReader.cs" />
+    <Compile Include="Base\GenerationContext.cs" />
     <Compile Include="Base\Genie.cs" />
-    <Compile Include="Base\Parser.cs" />
-    <Compile Include="Base\Reader.cs" />
-    <Compile Include="Base\Writer.cs" />
+    <Compile Include="Base\GenieBasicConfiguration.cs" />
+    <Compile Include="Base\GenieGenerationResult.cs" />
+    <Compile Include="Models\Abstract\IAttribute.cs" />
+    <Compile Include="Models\Abstract\IContentFile.cs" />
+    <Compile Include="Models\Abstract\IForeignKeyAttribute.cs" />
+    <Compile Include="Models\Abstract\IRelation.cs" />
+    <Compile Include="Models\Abstract\IStoredProcedure.cs" />
+    <Compile Include="Models\Abstract\IView.cs" />
+    <Compile Include="Models\Abstract\ISimpleAttribute.cs" />
     <Compile Include="Models\Attribute.cs" />
-    <Compile Include="Models\DatabaseModel.cs" />
+    <Compile Include="Models\ContentFile.cs" />
     <Compile Include="Models\ForeignKeyAttribute.cs" />
     <Compile Include="Models\Relation.cs" />
+    <Compile Include="Models\SimpleAttribute.cs" />
     <Compile Include="Models\StoredProcedure.cs" />
     <Compile Include="Models\View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Templates\Basic\Dapper.cs">
+    <Compile Include="Templates\Dapper\SqlMapper.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Dapper.tt</DependentUpon>
+      <DependentUpon>SqlMapper.tt</DependentUpon>
     </Compile>
-    <Compile Include="Templates\Basic\General.cs">
+    <Compile Include="Templates\Extensions\TemplateExtensions.cs" />
+    <Compile Include="Templates\General\EnumBase.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>General.tt</DependentUpon>
+      <DependentUpon>EnumBase.tt</DependentUpon>
     </Compile>
-    <Compile Include="Templates\Basic\SQLMaker.cs">
+    <Compile Include="Templates\General\Interfaces\IEnumBase.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SQLMaker.tt</DependentUpon>
+      <DependentUpon>IEnumBase.tt</DependentUpon>
     </Compile>
-    <Compile Include="Templates\Complex\DA.cs">
+    <Compile Include="Templates\Infrastructure\DapperContext.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DA.tt</DependentUpon>
+      <DependentUpon>DapperContext.tt</DependentUpon>
     </Compile>
-    <Compile Include="Templates\Complex\DACode.cs" />
-    <Compile Include="Templates\Complex\Infrastructure.cs">
+    <Compile Include="Templates\Infrastructure\EnumQueriesStoredProcedures\QueriesAndEnum.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Infrastructure.tt</DependentUpon>
+      <DependentUpon>QueriesAndEnum.tt</DependentUpon>
     </Compile>
-    <Compile Include="Templates\Complex\InfrastructureCode.cs" />
+    <Compile Include="Templates\Infrastructure\Enum\ConditionExtension.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConditionExtension.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\FactoryRepository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FactoryRepository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Interfaces\IDapperContext.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IDapperContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Interfaces\IFactoryRepository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IFactoryRepository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Interfaces\IRepository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IRepository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Interfaces\IUnitOfWork.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IUnitOfWork.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Interfaces\IViewRepository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IViewRepository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Models\Relation.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Relation.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Models\View.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>View.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\Repository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Repository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\UnitOfWork.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UnitOfWork.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Infrastructure\ViewRepository.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ViewRepository.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlFirst.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlFirst.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMaker.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMaker.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMkrBase.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMkrBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMakerDelete.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMakerDelete.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMakerInsert.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMakerInsert.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMakerSelect.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMakerSelect.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\Interfaces\ISqlMakerUpdate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ISqlMakerUpdate.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\SqlMaker\QueryMaker.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QueryMaker.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\GenieExceptionMessageFormatter.cs" />
+    <Compile Include="Base\Abstract\IValidatableConfiguration.cs" />
+    <Compile Include="Tools\IMessageFormatter.cs" />
+    <Compile Include="Base\Abstract\IProcessOutput.cs" />
+    <Compile Include="Base\NonFunctioningProcessOutput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -97,25 +216,105 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Templates\Basic\Dapper.tt">
+    <Content Include="Templates\Dapper\SqlMapper.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>Dapper.cs</LastGenOutput>
+      <LastGenOutput>SqlMapper.cs</LastGenOutput>
     </Content>
-    <Content Include="Templates\Basic\General.tt">
+    <Content Include="Templates\General\EnumBase.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>General.cs</LastGenOutput>
+      <LastGenOutput>EnumBase.cs</LastGenOutput>
     </Content>
-    <Content Include="Templates\Basic\SQLMaker.tt">
+    <Content Include="Templates\General\Interfaces\IEnumBase.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>SQLMaker.cs</LastGenOutput>
+      <LastGenOutput>IEnumBase.cs</LastGenOutput>
     </Content>
-    <Content Include="Templates\Complex\DA.tt">
+    <Content Include="Templates\Infrastructure\DapperContext.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DA.cs</LastGenOutput>
+      <LastGenOutput>DapperContext.cs</LastGenOutput>
     </Content>
-    <Content Include="Templates\Complex\Infrastructure.tt">
+    <Content Include="Templates\Infrastructure\EnumQueriesStoredProcedures\QueriesAndEnum.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>Infrastructure.cs</LastGenOutput>
+      <LastGenOutput>QueriesAndEnum.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Enum\ConditionExtension.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ConditionExtension.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\FactoryRepository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>FactoryRepository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Interfaces\IDapperContext.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>IDapperContext.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Interfaces\IFactoryRepository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>IFactoryRepository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Interfaces\IRepository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>IRepository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Interfaces\IUnitOfWork.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>IUnitOfWork.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Interfaces\IViewRepository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>IViewRepository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Models\Relation.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>Relation.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Models\View.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>View.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\Repository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>Repository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\UnitOfWork.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>UnitOfWork.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\Infrastructure\ViewRepository.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ViewRepository.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlFirst.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlFirst.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMaker.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMaker.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMkrBase.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMkrBase.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMakerDelete.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMakerDelete.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMakerInsert.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMakerInsert.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMakerSelect.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMakerSelect.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\Interfaces\ISqlMakerUpdate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ISqlMakerUpdate.cs</LastGenOutput>
+    </Content>
+    <Content Include="Templates\SqlMaker\QueryMaker.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>QueryMaker.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
