--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\DatabaseSchemaReader.2.3.0\lib\net45\DatabaseSchemaReader.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Build" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -42,19 +43,20 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\Abstract\IContentGenerator.cs" />
     <Compile Include="Base\Abstract\IDalGenerator.cs" />
+    <Compile Include="Base\Abstract\IFileWriter.cs" />
     <Compile Include="Base\Abstract\IObstacleManager.cs" />
+    <Compile Include="Base\Abstract\IProjectItemManager.cs" />
     <Compile Include="Base\ContentGenerator.cs" />
     <Compile Include="Base\DalGenerator.cs" />
+    <Compile Include="Base\DalWriter.cs" />
     <Compile Include="Base\DatabaseSchema.cs" />
     <Compile Include="Base\DatabaseSchemaReader.cs" />
     <Compile Include="Base\Abstract\IBasicConfiguration.cs" />
@@ -64,6 +66,7 @@
     <Compile Include="Base\Genie.cs" />
     <Compile Include="Base\GenieBasicConfiguration.cs" />
     <Compile Include="Base\GenieGenerationResult.cs" />
+    <Compile Include="Base\CSharpProjectItemManager.cs" />
     <Compile Include="Base\ObstacleManager.cs" />
     <Compile Include="Models\Abstract\IAttribute.cs" />
     <Compile Include="Models\Abstract\IContentFile.cs" />
